crates/rym_parser/src/tests/snapshots/rym_parser__tests__expr__unary_expressions-6.snap
---
source: crates/rym_parser/src/tests/expr.rs
expression: "&snapshot"
---
--- Input ---
!false
---

Some(
    Spanned(
        Unary(
            Not,
            Spanned(
                Ident(
                    Spanned(
                        "false",
                        1..6,
                    ),
                ),
                1..6,
            ),
        ),
        0..6,
    ),
)

--- Errors ---
[]
---
