crates/rym_parser/src/tests/snapshots/rym_parser__tests__expr__unary_expressions-7.snap
---
source: crates/rym_parser/src/tests/expr.rs
expression: "&snapshot"
---
--- Input ---
!!!true
---

Some(
    Spanned(
        Unary(
            Not,
            Spanned(
                Unary(
                    Not,
                    Spanned(
                        Unary(
                            Not,
                            Spanned(
                                Ident(
                                    Spanned(
                                        "true",
                                        3..7,
                                    ),
                                ),
                                3..7,
                            ),
                        ),
                        2..7,
                    ),
                ),
                1..7,
            ),
        ),
        0..7,
    ),
)

--- Errors ---
[]
---
