crates/rym_parser/src/tests/snapshots/rym_parser__tests__expr__unary_expressions-8.snap
---
source: crates/rym_parser/src/tests/expr.rs
expression: "&snapshot"
---
--- Input ---
!(lhs == rhs)
---

Some(
    Spanned(
        Unary(
            Not,
            Spanned(
                Binary(
                    Spanned(
                        Ident(
                            Spanned(
                                "lhs",
                                2..5,
                            ),
                        ),
                        2..5,
                    ),
                    Eq,
                    Spanned(
                        Ident(
                            Spanned(
                                "rhs",
                                9..12,
                            ),
                        ),
                        9..12,
                    ),
                ),
                2..12,
            ),
        ),
        0..12,
    ),
)

--- Errors ---
[]
---
