crates/rym_parser/src/tests/snapshots/rym_parser__tests__expr__unary_expressions-9.snap
---
source: crates/rym_parser/src/tests/expr.rs
expression: "&snapshot"
---
--- Input ---
!lhs == rhs
---

Some(
    Spanned(
        Binary(
            Spanned(
                Unary(
                    Not,
                    Spanned(
                        Ident(
                            Spanned(
                                "lhs",
                                1..4,
                            ),
                        ),
                        1..4,
                    ),
                ),
                0..4,
            ),
            Eq,
            Spanned(
                Ident(
                    Spanned(
                        "rhs",
                        8..11,
                    ),
                ),
                8..11,
            ),
        ),
        0..11,
    ),
)

--- Errors ---
[]
---
