crates/rym_parser/src/tests/snapshots/rym_parser__tests__expr__unary_expressions.snap
---
source: crates/rym_parser/src/tests/expr.rs
expression: "&snapshot"
---
--- Input ---
-255
---

Some(
    Spanned(
        Unary(
            Neg,
            Spanned(
                Literal(
                    Spanned(
                        Int(255),
                        1..4,
                    ),
                ),
                1..4,
            ),
        ),
        0..4,
    ),
)

--- Errors ---
[]
---
